[gd_scene load_steps=6 format=3 uid="uid://bdaqiv3l6ndpk"]

[ext_resource type="Script" uid="uid://bb22oliac8mqx" path="res://scenes/win_door/win_door.gd" id="1_vbkm6"]
[ext_resource type="Texture2D" uid="uid://5r5x2e543j3j" path="res://assets/simple_shapes/Square.png" id="2_c0i8q"]
[ext_resource type="Texture2D" uid="uid://c8yyhxm4kjf2f" path="res://assets/simple_shapes/Triangle.png" id="3_cohq1"]
[ext_resource type="AudioStream" uid="uid://rmha2afg647b" path="res://assets/sounds/door.wav" id="4_byqu7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cohq1"]
size = Vector2(8, 24)

[node name="WinDoor" type="Node2D" groups=["win_door"]]
script = ExtResource("1_vbkm6")
color_no_player = Color(0.9764706, 0.65882355, 0.45882353, 1)
color_yes_player = Color(1, 0.9647059, 0.827451, 1)

[node name="Sprites" type="Node2D" parent="."]
modulate = Color(1, 0.9647059, 0.827451, 1)
position = Vector2(0, -32)

[node name="DoorSprite" type="Sprite2D" parent="Sprites"]
position = Vector2(0, -8.000002)
scale = Vector2(0.09375, 0.15625)
texture = ExtResource("2_c0i8q")

[node name="ArrowDownSprite" type="Sprite2D" parent="Sprites"]
position = Vector2(0, -64)
rotation = 3.1415927
scale = Vector2(0.0625, 0.036036007)
texture = ExtResource("3_cohq1")

[node name="WinArea" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="WinArea"]
position = Vector2(0, -12)
shape = SubResource("RectangleShape2D_cohq1")

[node name="DoorSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_byqu7")
